--- a/packages/@textlint/feature-flag/package.json
+++ b/packages/@textlint/feature-flag/package.json
@@ -17,8 +17,8 @@
   "author": "azu",
   "type": "commonjs",
   "main": "./lib/src/index.js",
-  "types": "./lib/src/index.d.ts",
   "module": "./module/src/index.js",
+  "types": "./lib/src/index.d.ts",
   "directories": {
     "test": "test"
   },
@@ -33,14 +33,13 @@
     "build": "tsc -b && tsc -b tsconfig.module.json",
     "clean": "rimraf lib/ module/",
     "prepack": "npm run --if-present build",
-    "watch": "tsc -b --watch",
     "test": "vitest run",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "watch": "tsc -b --watch"
   },
   "devDependencies": {
     "@types/node": "^18.19.111",
     "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2",
     "typescript": "~5.3.3",
     "vitest": "^3.2.3"
   }
