--- a/packages/@textlint/source-code-fixer/package.json
+++ b/packages/@textlint/source-code-fixer/package.json
@@ -16,8 +16,8 @@
   },
   "license": "MIT",
   "author": "azu",
-  "type": "commonjs",
   "sideEffects": false,
+  "type": "commonjs",
   "main": "lib/src/index.js",
   "module": "module/src/index.js",
   "types": "lib/src/index.d.ts",
@@ -35,11 +35,11 @@
   "scripts": {
     "build": "tsc -b && tsc -b tsconfig.module.json",
     "clean": "rimraf lib/ module/",
-    "prepublishOnly": "npm run build",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
-    "watch": "tsc -b . --watch",
+    "prepublishOnly": "npm run build",
     "test": "vitest run",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "watch": "tsc -b . --watch"
   },
   "prettier": {
     "printWidth": 120,
@@ -56,7 +56,6 @@
     "@types/node": "^18.19.111",
     "prettier": "^2.7.1",
     "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2",
     "typescript": "~5.3.3",
     "vitest": "^3.2.3"
   },
