--- a/packages/@textlint/textlint-plugin-text/package.json
+++ b/packages/@textlint/textlint-plugin-text/package.json
@@ -13,9 +13,9 @@
   "license": "MIT",
   "author": "azu",
   "type": "commonjs",
-  "types": "lib/src/index.d.ts",
   "main": "lib/src/index.js",
   "module": "module/src/index.js",
+  "types": "lib/src/index.d.ts",
   "directories": {
     "test": "test"
   },
@@ -30,9 +30,9 @@
     "build": "tsc -b && tsc -b tsconfig.module.json",
     "clean": "rimraf lib/ module/",
     "prepack": "npm run --if-present build",
-    "watch": "tsc -b --watch",
     "test": "vitest run",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "watch": "tsc -b --watch"
   },
   "dependencies": {
     "@textlint/text-to-ast": "workspace:*",
@@ -44,7 +44,6 @@
     "@types/react": "^18.3.23",
     "rimraf": "^6.0.1",
     "textlint-rule-no-todo": "^2.0.1",
-    "ts-node": "^10.9.2",
     "typescript": "~5.3.3",
     "vitest": "^3.2.3"
   },
