--- a/website/package.json
+++ b/website/package.json
@@ -3,18 +3,30 @@
   "version": "14.8.1",
   "private": true,
   "scripts": {
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids",
     "bench": "textlint --config .textlintrc ../docs/ ../.github/ ../README.md",
+    "build": "docusaurus build",
+    "clear": "docusaurus clear",
+    "deploy": "docusaurus deploy",
+    "docusaurus": "docusaurus",
+    "serve": "docusaurus serve",
+    "start": "docusaurus start",
+    "swizzle": "docusaurus swizzle",
     "textlint": "textlint --cache --config .textlintrc ../docs/ ../.github/ ../README.md -f pretty-error",
-    "textlint:fix": "textlint --fix --cache -c .textlintrc ../docs ../.github/ ../README.md"
+    "textlint:fix": "textlint --fix --cache -c .textlintrc ../docs ../.github/ ../README.md",
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "write-translations": "docusaurus write-translations"
+  },
+  "browserslist": {
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "dependencies": {
     "@docusaurus/core": "^3.8.1",
@@ -33,18 +45,6 @@
     "textlint-rule-prh": "^5.3.0",
     "textlint-rule-rousseau": "^1.4.8",
     "textlint-rule-unexpanded-acronym": "^1.2.4"
-  },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "engines": {
     "node": ">=16.14"
