--- a/packages/textlint-tester/.mocharc.json
+++ b/packages/textlint-tester/.mocharc.json
@@ -1,6 +1,7 @@
 {
-    "timeout": 5000,
-    "import": "ts-node/esm",
-    "forbidOnly": true,
-    "spec": ["test/**/*.ts"]
+  "timeout": 5000,
+  "require": "tsx/cjs",
+  "extensions": ["ts"],
+  "spec": ["test/**/*.ts"],
+  "forbidOnly": true
 }
