fix: update eslint patterns to include .js files

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "ci:versionup:patch": "lerna version patch --no-push --no-git-tag-version --yes && npm run commit-version",
     "clean": "lerna run clean",
     "commit-version": "git add . && git commit -m \"chore(release): v`node -p 'require(\"./lerna.json\").version'`\"",
-    "eslint": "eslint --cache \"packages/**/{src,test}/**/*.ts\"",
-    "eslint:fix": "eslint --fix --cache \"packages/**/{src,test}/**/*.ts\"",
+    "eslint": "eslint --cache \"packages/**/{src,test}/**/*.{js,ts}\"",
+    "eslint:fix": "eslint --fix --cache \"packages/**/{src,test}/**/*.{js,ts}\"",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "lint": "npm-run-all eslint",
     "lint:fix": "npm-run-all eslint:fix",
