--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "ci:versionup:patch": "lerna version patch --no-push --no-git-tag-version --yes && npm run commit-version",
     "clean": "lerna run clean",
     "commit-version": "git add . && git commit -m \"chore(release): v`node -p 'require(\"./lerna.json\").version'`\"",
-    "eslint": "eslint --cache \"packages/**/{src,test}/**/*.js\"",
-    "eslint:fix": "eslint --fix --cache \"packages/**/{src,test}/**/*.js\"",
+    "eslint": "eslint --cache \"packages/**/{src,test}/**/*.{js,ts}\"",
+    "eslint:fix": "eslint --fix --cache \"packages/**/{src,test}/**/*.{js,ts}\"",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "lint": "npm-run-all eslint",
     "lint:fix": "npm-run-all eslint:fix",
@@ -29,7 +29,7 @@
     "update:projectReferences": "workspaces-to-typescript-project-references --includesRoot ",
     "updateSnapshot": "lerna run updateSnapshot",
     "versionup": "lerna version",
-    "website": "lerna run build --scope textlint-website"
+    "website": "pnpm run build && lerna run build --scope textlint-website"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css}": [
@@ -43,13 +43,14 @@
     "trailingComma": "none"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@monorepo-utils/workspaces-to-typescript-project-references": "^2.11.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "ajv": "^8.17.1",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "globals": "^15.0.0",
     "lerna": "^8.2.2",
     "lint-staged": "^13.3.0",
     "npm-run-all2": "^5.0.2",
