fix: add cache configuration for pnpm in Node.js setup

--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/setup-node@3235b876344d2a9aa001b8d1453c930bba69e610 # v3.9.1
         with:
           node-version: 22
+          cache: 'pnpm'
       - name: Update Version
         run: |
           git config --global user.email "${GIT_AUTHOR_EMAIL}"
