--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,6 +81,8 @@ jobs:
         run: echo "PACKAGE_VERSION=$(cat lerna.json | jq -r .version)" >> $GITHUB_ENV
       - name: Install
         run: pnpm install
+      - name: Build
+        run: pnpm run build
       - name: Publish
         run: pnpm run ci:release
         env:
