--- a/packages/textlint/package.json
+++ b/packages/textlint/package.json
@@ -69,8 +69,7 @@
     "optionator": "^0.9.4",
     "path-to-glob-pattern": "^2.0.1",
     "rc-config-loader": "^4.1.3",
-    "read-pkg": "^1.1.0",
-    "read-pkg-up": "^3.0.0",
+    "read-package-up": "^11.0.0",
     "structured-source": "^4.0.0",
     "unique-concat": "^0.2.2",
     "zod": "^3.25.64"
@@ -81,7 +80,6 @@
     "@types/debug": "^4.1.12",
     "@types/glob": "^8.1.0",
     "@types/node": "^18.19.111",
-    "@types/read-pkg-up": "^3.0.1",
     "@types/shelljs": "^0.8.16",
     "clone": "^2.1.2",
     "rimraf": "^6.0.1",
