--- a/packages/@textlint/kernel/package.json
+++ b/packages/@textlint/kernel/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@textlint/markdown-to-ast": "workspace:*",
+    "textlint-rule-preset-ja-spacing": "^2.4.3",
     "@types/debug": "^4.1.12",
     "@types/node": "^18.19.111",
     "rimraf": "^6.0.1",
