--- a/examples/use-as-ts-module/tsconfig.json
+++ b/examples/use-as-ts-module/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "lib",
     "module": "NodeNext",
-    "moduleResolution": "NodeNext"
+    "moduleResolution": "NodeNext",
+    "composite": true
   },
   "references": [
     {
