fix: remove unnecessary build command from website preview workflow

--- a/.github/workflows/website-preview.yml
+++ b/.github/workflows/website-preview.yml
@@ -39,11 +39,10 @@ jobs:
       - name: Build website
         if: github.event.action != 'closed'
         run: |
-          pnpm run build --scope textlint-website
           pnpm run website
 
       - name: Deploy PR preview
-        uses: rossjrw/pr-preview-action@v1
+        uses: rossjrw/pr-preview-action@2fb559e4766555e23d07b73d313fe97c4f8c3cfe # v1.6.1
         with:
           source-dir: ./website/build
           preview-branch: gh-pages
