feat: set dynamic DOCUSAURUS_BASE_URL for PR previews
- Set DOCUSAURUS_BASE_URL to match PR preview path pattern
- Use github.event.number to dynamically generate base URL
- Ensures Docusaurus routing works correctly in PR previews
- Path format: /textlint/pr-preview/pr-{PR_NUMBER}/

--- a/.github/workflows/website-preview.yml
+++ b/.github/workflows/website-preview.yml
@@ -40,9 +40,11 @@ jobs:
         if: github.event.action != 'closed'
         run: |
           pnpm run website
+        env:
+          DOCUSAURUS_BASE_URL: "/textlint/pr-preview/pr-${{ github.event.number }}/"
 
       - name: Deploy PR preview
-        uses: rossjrw/pr-preview-action@2fb559e4766555e23d07b73d313fe97c4f8c3cfe # v1.6.1
+        uses: rossjrw/pr-preview-action@v1
         with:
           source-dir: ./website/build
           preview-branch: gh-pages
