--- a/examples/cli/package.json
+++ b/examples/cli/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "test": "npm run textlint",
     "test:ci": "npm test",
-    "textlint": "textlint --rule no-todo '*.md'"
+    "textlint": "textlint --rule no-todo \"*.md\""
   },
   "devDependencies": {
     "textlint": "workspace:*",
