fix: Remove 'module' field from packages with type=commonjs to fix webpack compatibility
This change removes the 'module' field from all packages that have 'type': 'commonjs'
to resolve webpack compatibility issues where both fields cannot coexist.

Changes:
- Remove 'module' field from 15 @textlint packages
- Remove module/ directory from files array
- Update build scripts to not build module/ version
- Update clean scripts to not remove module/ directory
- Remove tsconfig.module.json files

Fixes #1587

--- a/packages/@textlint/config-loader/package.json
+++ b/packages/@textlint/config-loader/package.json
@@ -18,7 +18,6 @@
   "sideEffects": false,
   "type": "commonjs",
   "main": "lib/src/index.js",
-  "module": "module/src/index.js",
   "types": "lib/src/index.d.ts",
   "directories": {
     "lib": "lib",
@@ -30,8 +29,8 @@
     "module"
   ],
   "scripts": {
-    "build": "tsc -b . && tsc -b ./tsconfig.module.json",
-    "clean": "rimraf lib/ module/",
+    "build": "tsc -b .",
+    "clean": "rimraf lib/",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "prepublish": "npm run --if-present build",
     "test": "vitest run",
