--- a/packages/@textlint/resolver/package.json
+++ b/packages/@textlint/resolver/package.json
@@ -20,7 +20,6 @@
   "author": "azu",
   "type": "commonjs",
   "main": "lib/src/index.js",
-  "module": "module/src/index.js",
   "types": "./module/src/index.d.ts",
   "directories": {
     "lib": "lib",
@@ -28,12 +27,11 @@
   },
   "files": [
     "bin/",
-    "module/",
     "src/"
   ],
   "scripts": {
-    "build": "tsc -b && tsc -b tsconfig.module.json",
-    "clean": "tsc -b --clean && tsc -b tsconfig.module.json --clean",
+    "build": "tsc -b",
+    "clean": "tsc -b --clean --clean",
     "prepublishOnly": "npm run clean && npm run build",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "prepublish": "npm run --if-present build",
