--- a/packages/@textlint/ast-node-types/package.json
+++ b/packages/@textlint/ast-node-types/package.json
@@ -13,18 +13,16 @@
   "author": "azu",
   "type": "commonjs",
   "main": "./lib/src/index.js",
-  "module": "./module/src/index.js",
   "types": "./lib/src/index.d.ts",
   "files": [
     "bin/",
     "lib/",
-    "module/",
     "src/",
     "!*.tsbuildinfo"
   ],
   "scripts": {
-    "build": "tsc -b && tsc -b tsconfig.module.json",
-    "clean": "rimraf lib/ module/",
+    "build": "tsc -b",
+    "clean": "rimraf lib/",
     "prepack": "npm run build",
     "test": "vitest run",
     "test:watch": "vitest watch"
