--- a/packages/@textlint/ast-traverse/package.json
+++ b/packages/@textlint/ast-traverse/package.json
@@ -18,7 +18,6 @@
   "author": "azu",
   "type": "commonjs",
   "main": "./lib/src/index.js",
-  "module": "./module/src/index.js",
   "types": "./lib/src/index.d.ts",
   "directories": {
     "test": "test/"
@@ -26,13 +25,12 @@
   "files": [
     "bin/",
     "lib/",
-    "module/",
     "src/",
     "!*.tsbuildinfo"
   ],
   "scripts": {
-    "build": "tsc -b && tsc -b tsconfig.module.json",
-    "clean": "rimraf lib/ module/",
+    "build": "tsc -b",
+    "clean": "rimraf lib/",
     "prepack": "npm run --if-present build",
     "test": "vitest run",
     "test:watch": "vitest watch",
