--- a/packages/@textlint/kernel/package.json
+++ b/packages/@textlint/kernel/package.json
@@ -17,7 +17,6 @@
   "author": "azu",
   "type": "commonjs",
   "main": "lib/src/index.js",
-  "module": "./module/src/index.js",
   "typings": "lib/src/index.d.ts",
   "directories": {
     "test": "test"
@@ -25,13 +24,12 @@
   "files": [
     "bin/",
     "lib/",
-    "module/",
     "src/",
     "!*.tsbuildinfo"
   ],
   "scripts": {
-    "build": "tsc -b && tsc -b tsconfig.module.json",
-    "clean": "rimraf lib/ module/",
+    "build": "tsc -b",
+    "clean": "rimraf lib/",
     "prepack": "npm run --if-present build",
     "test": "vitest run",
     "test:build": "tsc -b test",
