--- a/packages/@textlint/module-interop/package.json
+++ b/packages/@textlint/module-interop/package.json
@@ -21,7 +21,6 @@
   "author": "azu",
   "type": "commonjs",
   "main": "lib/src/index.js",
-  "module": "module/src/index.js",
   "types": "lib/src/index.d.ts",
   "directories": {
     "lib": "lib",
@@ -30,13 +29,12 @@
   "files": [
     "bin/",
     "lib/",
-    "module/",
     "src/",
     "!*.tsbuildinfo"
   ],
   "scripts": {
-    "build": "tsc -b && tsc -b tsconfig.module.json",
-    "clean": "rimraf lib/ module/",
+    "build": "tsc -b",
+    "clean": "rimraf lib/",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "prepack": "npm run --if-present build",
     "test": "vitest run",
