fix: Remove 'module' field from packages with type=commonjs to fix webpack compatibility (#1588)
* fix: Remove 'module' field from packages with type=commonjs to fix webpack compatibility

This change removes the 'module' field from all packages that have 'type': 'commonjs'
to resolve webpack compatibility issues where both fields cannot coexist.

Changes:
- Remove 'module' field from 15 @textlint packages
- Remove module/ directory from files array
- Update build scripts to not build module/ version
- Update clean scripts to not remove module/ directory
- Remove tsconfig.module.json files

Fixes #1587

* fix: Correct types path in package.json for @textlint/resolver

--- a/packages/@textlint/resolver/package.json
+++ b/packages/@textlint/resolver/package.json
@@ -20,20 +20,18 @@
   "author": "azu",
   "type": "commonjs",
   "main": "lib/src/index.js",
-  "module": "module/src/index.js",
-  "types": "./module/src/index.d.ts",
+  "types": "lib/src/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
   "files": [
     "bin/",
-    "module/",
     "src/"
   ],
   "scripts": {
-    "build": "tsc -b && tsc -b tsconfig.module.json",
-    "clean": "tsc -b --clean && tsc -b tsconfig.module.json --clean",
+    "build": "tsc -b",
+    "clean": "tsc -b --clean --clean",
     "prepublishOnly": "npm run clean && npm run build",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "prepublish": "npm run --if-present build",
