refactor: remove deprecated tests and add new comprehensive tests for formatter functionality

--- a/packages/@textlint/fixer-formatter/package.json
+++ b/packages/@textlint/fixer-formatter/package.json
@@ -35,6 +35,7 @@
     "clean": "rimraf lib/",
     "prepack": "npm run build",
     "test": "vitest run",
+    "updateSnapshot": "UPDATE_SNAPSHOT=true vitest run -u",
     "test:watch": "vitest watch"
   },
   "dependencies": {
