--- a/packages/@textlint/linter-formatter/package.json
+++ b/packages/@textlint/linter-formatter/package.json
@@ -29,6 +29,7 @@
     "clean": "rimraf lib/",
     "prepack": "npm run build",
     "test": "vitest run",
+    "updateSnapshot": "UPDATE_SNAPSHOT=true vitest run -u",
     "test:watch": "vitest watch"
   },
   "dependencies": {
@@ -53,9 +54,7 @@
     "@types/lodash": "^4.17.18",
     "@types/node": "^18.19.112",
     "chai": "^4.5.0",
-    "proxyquire": "^2.1.3",
     "rimraf": "^6.0.1",
-    "sinon": "^1.17.7",
     "typescript": "~5.8.3",
     "vitest": "^3.2.4"
   },
