--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,119 +2,117 @@ name: "CI"
 on: [push, pull_request]
 
 permissions:
-  contents: read
+    contents: read
 jobs:
-  test:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        node: [ 20, 22 ]
+    test:
+        strategy:
+            matrix:
+                os: [ubuntu-latest, windows-latest]
+                node: [20, 22]
 
-    name: Test(Node ${{ matrix.node }} on ${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+        name: Test(Node ${{ matrix.node }} on ${{ matrix.os }})
+        runs-on: ${{ matrix.os }}
+        steps:
+            - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
-      - uses: actions/setup-node@3235b876344d2a9aa001b8d1453c930bba69e610 # v3.9.1
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'pnpm'
-      - name: Install
-        run: pnpm install
-      - name: Test
-        run: pnpm test
-        env:
-          DEBUG: "textlint:*"
-      - name: Test Examples
-        run: pnpm run test:examples
+            - name: Install pnpm
+              uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
+            - uses: actions/setup-node@3235b876344d2a9aa001b8d1453c930bba69e610 # v3.9.1
+              with:
+                  node-version: ${{ matrix.node }}
+                  cache: "pnpm"
+            - name: Install
+              run: pnpm install
+            - name: Test
+              run: pnpm test
+            - name: Test Examples
+              run: pnpm run test:examples
 
-  benchmark:
-    name: Benchmark
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    if: github.event_name == 'push'
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+    benchmark:
+        name: Benchmark
+        runs-on: ubuntu-latest
+        permissions:
+            contents: write
+        if: github.event_name == 'push'
+        steps:
+            - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
-      - uses: actions/setup-node@3235b876344d2a9aa001b8d1453c930bba69e610 # v3.9.1
-        with:
-          node-version: 22
-          cache: 'pnpm'
-      - name: Install Hyperfine
-        run: |
-          wget https://github.com/sharkdp/hyperfine/releases/download/v1.15.0/hyperfine_1.15.0_amd64.deb
-          sudo dpkg -i hyperfine_1.15.0_amd64.deb
-      - name: Install
-        run: pnpm install
-      - name: Build textlint
-        run: pnpm run build
-      - name: Benchmark
-        run: pnpm run bench
-        working-directory: ./test/benchmark
-      - name: Get Previous Benchmark Results
-        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
-        with:
-          path: ./cache
-          key: ${{ runner.os }}-benchmark
-      - name: Save Benchmark Results
-        uses: benchmark-action/github-action-benchmark@d48d326b4ca9ba73ca0cd0d59f108f9e02a381c7 # v1.20.4
-        with:
-          tool: 'customSmallerIsBetter'
-          output-file-path: ./test/benchmark/output.json
-          benchmark-data-dir-path: 'benchmarks'
-          fail-on-alert: true
-          comment-on-alert: true
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          auto-push: true
-      - name: Output Step Summary
-        run: |
-          cat ./test/benchmark/result.md > $GITHUB_STEP_SUMMARY
-          echo "- <https://textlint.org/textlint/benchmarks/>" >> $GITHUB_STEP_SUMMARY
-  e2e:
-    name: E2E
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          submodules: recursive
+            - name: Install pnpm
+              uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
+            - uses: actions/setup-node@3235b876344d2a9aa001b8d1453c930bba69e610 # v3.9.1
+              with:
+                  node-version: 22
+                  cache: "pnpm"
+            - name: Install Hyperfine
+              run: |
+                  wget https://github.com/sharkdp/hyperfine/releases/download/v1.15.0/hyperfine_1.15.0_amd64.deb
+                  sudo dpkg -i hyperfine_1.15.0_amd64.deb
+            - name: Install
+              run: pnpm install
+            - name: Build textlint
+              run: pnpm run build
+            - name: Benchmark
+              run: pnpm run bench
+              working-directory: ./test/benchmark
+            - name: Get Previous Benchmark Results
+              uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
+              with:
+                  path: ./cache
+                  key: ${{ runner.os }}-benchmark
+            - name: Save Benchmark Results
+              uses: benchmark-action/github-action-benchmark@d48d326b4ca9ba73ca0cd0d59f108f9e02a381c7 # v1.20.4
+              with:
+                  tool: "customSmallerIsBetter"
+                  output-file-path: ./test/benchmark/output.json
+                  benchmark-data-dir-path: "benchmarks"
+                  fail-on-alert: true
+                  comment-on-alert: true
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  auto-push: true
+            - name: Output Step Summary
+              run: |
+                  cat ./test/benchmark/result.md > $GITHUB_STEP_SUMMARY
+                  echo "- <https://textlint.org/textlint/benchmarks/>" >> $GITHUB_STEP_SUMMARY
+    e2e:
+        name: E2E
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+              with:
+                  submodules: recursive
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
-      - uses: actions/setup-node@3235b876344d2a9aa001b8d1453c930bba69e610 # v3.9.1
-        with:
-          node-version: 22
-          cache: 'pnpm'
-      - name: Install
-        run: pnpm install
-      - name: Build textlint
-        run: pnpm run build
-      - name: Integration Tests
-        run: pnpm run test:integration
+            - name: Install pnpm
+              uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
+            - uses: actions/setup-node@3235b876344d2a9aa001b8d1453c930bba69e610 # v3.9.1
+              with:
+                  node-version: 22
+                  cache: "pnpm"
+            - name: Install
+              run: pnpm install
+            - name: Build textlint
+              run: pnpm run build
+            - name: Integration Tests
+              run: pnpm run test:integration
 
-  documentation:
-    strategy:
-      matrix:
-        node: [ 22 ]
+    documentation:
+        strategy:
+            matrix:
+                node: [22]
 
-    name: Documentation(Node ${{ matrix.node }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          submodules: recursive
+        name: Documentation(Node ${{ matrix.node }}
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+              with:
+                  submodules: recursive
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
-      - uses: actions/setup-node@3235b876344d2a9aa001b8d1453c930bba69e610 # v3.9.1
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'pnpm'
-      - name: Install
-        run: pnpm install
-      - run: pnpm run test:docs
-      - run: pnpm run website
+            - name: Install pnpm
+              uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
+            - uses: actions/setup-node@3235b876344d2a9aa001b8d1453c930bba69e610 # v3.9.1
+              with:
+                  node-version: ${{ matrix.node }}
+                  cache: "pnpm"
+            - name: Install
+              run: pnpm install
+            - run: pnpm run test:docs
+            - run: pnpm run website
