--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "build": "lerna run build",
     "ci:release": "lerna publish from-package --yes",
-    "ci:versionup:major": "lerna version major --no-push --no-git-tag-version --yes && npm run commit-version",
-    "ci:versionup:minor": "lerna version minor --no-push --no-git-tag-version --yes && npm run commit-version",
-    "ci:versionup:patch": "lerna version patch --no-push --no-git-tag-version --yes && npm run commit-version",
+    "ci:versionup:major": "lerna version major --no-push --no-git-tag-version --yes && pnpm run commit-version",
+    "ci:versionup:minor": "lerna version minor --no-push --no-git-tag-version --yes && pnpm run commit-version",
+    "ci:versionup:patch": "lerna version patch --no-push --no-git-tag-version --yes && pnpm run commit-version",
     "clean": "lerna run clean",
     "commit-version": "git add . && git commit -m \"chore(release): v`node -p 'require(\"./lerna.json\").version'`\"",
     "eslint": "eslint --cache \"packages/**/{src,test}/**/*.{js,ts}\"",
@@ -14,7 +14,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "lint": "npm-run-all eslint",
     "lint:fix": "npm-run-all eslint:fix",
-    "perf": "cd ./examples/perf && npm run test:ci",
+    "perf": "cd ./examples/perf && pnpm run test:ci",
     "prepare": "git config --local core.hooksPath .githooks",
     "release": "lerna publish from-package",
     "test": "npm-run-all --parallel lint test:projectReferences test:packages",
