--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+        with:
+          persist-credentials: false
 
       - name: Install pnpm
         uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
@@ -61,12 +63,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
+        with:
+          persist-credentials: false
       - name: Install pnpm
         uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
       - name: Setup Node
         uses: actions/setup-node@3235b876344d2a9aa001b8d1453c930bba69e610 # v3.9.1
         with:
-          cache: 'pnpm'
+          # Release workflow should not use cache for avoiding cache poisoning
+          # https://docs.zizmor.sh/audits/#cache-poisoning
+          # cache: 'pnpm'
           node-version: 22
           # for publishing packages to pnpm
           registry-url: https://registry.npmjs.org
@@ -120,5 +126,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '🎉 Release https://github.com/${{ github.repository }}/releases/tag/v${{ env.PACKAGE_VERSION }}'
+              body: '🎉 Release https://github.com/${{ github.repository }}/releases/tag/v${ PACKAGE_VERSION }'
             })
+        env:
+          PACKAGE_VERSION: ${{ env.PACKAGE_VERSION }}
